[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/instance/level_end.gd" type="Script" id=1]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.230216, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
albedo_texture = SubResource( 2 )
metallic_specular = 0.0

[sub_resource type="PlaneMesh" id=4]
material = SubResource( 3 )
size = Vector2( 4, 3.8 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0, 0, 0, 1 )
metallic_specular = 0.0

[sub_resource type="PlaneMesh" id=5]
material = SubResource( 6 )
size = Vector2( 4, 4 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 1, 2, 2 )

[node name="LevelEnd" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
mesh = SubResource( 4 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 3.9, 0 )
mesh = SubResource( 4 )

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1.31134e-07, 1, 0, -1, 1.31134e-07, 0, 2, 1.9 )
mesh = SubResource( 4 )

[node name="MeshInstance4" type="MeshInstance" parent="."]
transform = Transform( 1, -8.74228e-08, 8.74228e-08, 8.74228e-08, -1.31134e-07, -1, 8.74228e-08, 1, -1.31134e-07, 0, 2, -1.9 )
mesh = SubResource( 4 )

[node name="MeshInstance5" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -1.9, 2, 0 )
mesh = SubResource( 5 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 2, 0 )
shape = SubResource( 7 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
